[package]
name = "snowfall"
version = "0.1.0"
edition = "2021"

[lib]
name = "snowfall"
path = "src/lib.rs"

[dependencies]
ark-ec = "0.3.0"
ark-bls12-381 = "0.3.0"
ark-crypto-primitives = { version = "0.3.0", features = ["r1cs"] }
ark-ed-on-bls12-381 = { version = "0.3.0", features = ["r1cs"] }
ark-ff = "0.3.0"
ark-r1cs-std = "0.3.0"
ark-relations = "0.3.0"
ark-serialize = "0.3.0"
ark-std = "0.3.0"
rand = "0.8.5"
